# openride-backend

./: .env.example  .gitignore  ALIGNMENT_PLAN.md  BACKEND_IMPLEMENTATION_PLAN.md  DEVELOPMENT.md  PHASE 12.MD  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  constraints.md  docker-compose.yml  setup.bat  setup.sh  start-phase1-services.sh  start-phase3-services.sh  start-phase4-service.sh
services/python/analytics-service/: .env.example  Dockerfile  PHASE_10_SUMMARY.md  README.md  alembic.ini  pyproject.toml
services/python/analytics-service/alembic/: env.py
services/python/analytics-service/alembic/versions/: 001_initial_schema.py
services/python/analytics-service/app/: consumer_main.py  main.py
services/python/analytics-service/app/api/: __init__.py  analytics.py  exports.py  health.py  metrics.py  reports.py
services/python/analytics-service/app/consumer/: __init__.py  kafka_consumer.py
services/python/analytics-service/app/core/: __init__.py  clickhouse.py  config.py  logging.py  redis.py
services/python/analytics-service/app/db/: __init__.py  models.py  session.py
services/python/analytics-service/app/schemas/: __init__.py  analytics.py  booking_events.py  exports.py  location_events.py  metrics.py  payment_events.py  reports.py  route_events.py  trip_events.py  user_events.py
services/python/analytics-service/app/services/: aggregations.py  analytics.py  exports.py  reports.py
services/python/analytics-service/clickhouse/: 001_create_events_raw.sql  002_create_filtered_tables.sql  003_create_materialized_views.sql  README.md
services/python/analytics-service/tests/: __init__.py  conftest.py  test_aggregations.py  test_analytics.py  test_consumer.py  test_events.py  test_integration.py
services/python/driver-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start.bat  start.sh
services/python/driver-service/alembic/: env.py
services/python/driver-service/alembic/versions/: 001_initial_migration.py  002_create_hubs_table.py  003_enhance_stops_table.py  004_add_hub_to_routes.py
services/python/driver-service/app/: __init__.py  main.py
services/python/driver-service/app/core/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  security.py
services/python/driver-service/app/models/: __init__.py  hub.py  route.py  stop.py  vehicle.py
services/python/driver-service/app/repositories/: __init__.py  hub_repository.py  route_repository.py  stop_repository.py  vehicle_repository.py
services/python/driver-service/app/schemas/: __init__.py  route.py  stop.py  vehicle.py
services/python/driver-service/app/services/: __init__.py  route_service.py  stop_service.py  user_service.py  vehicle_service.py
services/python/driver-service/tests/: conftest.py  test_routes.py  test_vehicles.py
services/python/fleet-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/python/fleet-service/alembic/: env.py
services/python/fleet-service/alembic/versions/: 001_initial_schema.py
services/python/fleet-service/app/: __init__.py  main.py
services/python/fleet-service/app/api/: __init__.py  drivers.py  health.py  trips.py
services/python/fleet-service/app/core/: __init__.py  config.py  logging.py  redis.py
services/python/fleet-service/app/db/: __init__.py  models.py  session.py
services/python/fleet-service/app/middleware/: __init__.py  auth.py  ratelimit.py
services/python/fleet-service/app/schemas/: __init__.py  location.py  trip.py  websocket.py
services/python/fleet-service/app/services/: __init__.py  auth.py  connection.py  location.py  trip.py
services/python/fleet-service/app/websocket/: __init__.py  server.py
services/python/fleet-service/docs/: API.md  DEPLOYMENT.md
services/python/fleet-service/tests/: __init__.py  conftest.py  test_location.py  test_trip.py  test_websocket.py
services/python/matchmaking-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/python/matchmaking-service/alembic/: env.py  script.py.mako
services/python/matchmaking-service/alembic/versions/: 001_add_geospatial_columns.py
services/python/matchmaking-service/app/: __init__.py  main.py
services/python/matchmaking-service/app/core/: cache.py  config.py  database.py  exceptions.py  logging_config.py  redis.py  security.py
services/python/matchmaking-service/app/metrics/: __init__.py  prometheus.py
services/python/matchmaking-service/app/middleware/: __init__.py  performance_middleware.py
services/python/matchmaking-service/app/models/: __init__.py  hub.py  mixins.py  route.py  route_stop.py  stop.py
services/python/matchmaking-service/app/repositories/: hub_repository.py  route_repository.py
services/python/matchmaking-service/app/schemas/: matching.py
services/python/matchmaking-service/app/services/: cache_invalidation_listener.py  driver_cache_service.py  driver_tier_service.py  feature_extraction_service.py  (+10 more)
services/python/matchmaking-service/tests/: test_cache_services.py  test_feature_extraction_service.py  test_performance.py  test_scoring_service_ml.py
services/python/notification-service/: .env.example  .gitignore  Dockerfile  PHASE_10_COMPLETE.md  README.md  alembic.ini  celery_app.py  pyproject.toml
services/python/notification-service/alembic/: env.py
services/python/notification-service/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
services/python/notification-service/tests/: README.md  conftest.py  test_api_notifications.py  test_api_preferences.py  test_api_templates.py  test_api_tokens.py  test_auth.py  test_celery_tasks.py  test_email_service.py  test_fcm_service.py  test_integration.py  test_notification_service.py  test_preference_service.py  test_template_service.py  test_termii_service.py
shared/python-commons/: README.md  pyproject.toml
shared/python-commons/openride_commons/: __init__.py  database.py  exceptions.py  logging.py  middleware.py  response.py  security.py
(+462 files in other folders)
