[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openride-fleet-service"
version = "1.0.0"
description = "Real-time fleet tracking and monitoring service for OpenRide"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "OpenRide Team", email = "tech@openride.ng"}
]

dependencies = [
    # FastAPI & Server
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "python-socketio>=5.10.0,<6.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.23,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.12.1,<1.13.0",
    "geoalchemy2>=0.14.2,<0.15.0",
    
    # Redis
    "redis[hiredis]>=5.0.1,<6.0.0",
    "aioredis>=2.0.1,<3.0.0",
    
    # Geospatial
    "shapely>=2.0.2,<3.0.0",
    "geopy>=2.4.1,<3.0.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    
    # Utilities
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.25.2,<0.26.0",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0,<0.20.0",
    "structlog>=23.2.0,<24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "httpx>=0.25.2,<0.26.0",
    "black>=23.12.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.7.1,<2.0.0",
    "isort>=5.13.0,<6.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
